impressum + nav/footer optimisation
added impressum and styling, removed text from nav footer starting on 450px width.

--- a/src/app/shared/legal-notice/legal-notice.component.html
+++ b/src/app/shared/legal-notice/legal-notice.component.html
@@ -1,1 +1,28 @@
-<p>legal-notice works!</p>
+<div class="main-content">
+  <div class="nav-area"><app-nav-footer></app-nav-footer></div>
+  <div class="main-content-input">
+    <app-header></app-header>
+        <div class="contractDetails">
+            <h1 class="DieterHeading1">Impressum</h1>
+            <h2 class="HeadingLeft"><span>Anbieter</span></h2>
+            <p class="Body">Burak Bostanli, Pascal Fiedler, Irina Gorges, Maik Bennefeld</p>
+            <p class="Body"><span class="multiline">Am Schacht 10
+                31084 Freden</span>
+            </p>
+            <h2 class="HeadingLeft"><span>Kontakt</span></h2>
+            <p class="Body">E-Mail: maikbennefeld&#64;googlemail.com</p>
+            <p class="Body">Telefon: 016095160472</p>
+            <h2 class="HeadingLeft"><span>Datenschutzhinweis</span></h2>
+            <p class="Body">Unsere Datenschutzerklärung finden Sie unter: <a href="https://ik-0225-join-003.developerakademie.net/angular-projects/join/privacy" target="_blank">https://ik-0225-join-003.developerakademie.net/angular-projects/join/privacy</a></p>
+            <h2 class="HeadingLeft"><span>Urheberrechtshinweis</span></h2>
+            <p class="Body">Die auf unserer Internetseite vorhandenen Texte, Bilder, Fotos, Videos oder Grafiken unterliegen in der Regel dem Schutz des Urheberrechts. Jede unberechtigte Verwendung (insbesondere die Vervielfältigung, Bearbeitung oder Verbreitung) dieser urheberrechtsgeschützten Inhalte ist daher untersagt. Wenn Sie beabsichtigen, diese Inhalte oder Teile davon zu verwenden, kontaktieren Sie uns bitte im Voraus unter den oben stehenden Angaben. Soweit wir nicht selbst Inhaber der benötigten urheberrechtlichen Nutzungsrechte sein sollten, bemühen wir uns, einen Kontakt zum Berechtigten zu vermitteln.</p>
+            <p class="DieterSmall"><span>Erstellt mit freundlicher Unterstützung von </span>
+                <a href="https://www.dieter-datenschutz.de/">
+                    <span>Dieter macht den Datenschutz</span>
+                </a>
+            </p>
+        </div>
+  </div>
+</div>
+<app-nav-footer-mobile></app-nav-footer-mobile>
+
