--- a/src/app/shared/nav-footer-mobile/nav-footer-mobile.component.scss
+++ b/src/app/shared/nav-footer-mobile/nav-footer-mobile.component.scss
@@ -37,11 +37,18 @@ section {
                     margin: 0;
                 }
 
-                a{
+                a {
                     gap: 0.5em;
                     display: flex;
                     align-items: center;
                     color: white;
+                    flex-direction: column;
+
+                    @media (max-width:450px) {
+                        p {
+                            display: none;
+                        }
+                    }
                 }
 
                 &:hover {
