translated imprint from german to englisch

--- a/src/app/shared/legal-notice/legal-notice.component.scss
+++ b/src/app/shared/legal-notice/legal-notice.component.scss
@@ -123,6 +123,12 @@ p.Body p span span {
     margin-left: 0;
 }
 
+.DieterSmall {
+    margin: 1.6em;
+    font-size: 1rem;
+    font-weight: 200;
+}
+
 .DieterInvisible {
     display: none;
 }
