--- a/src/app/shared/legal-notice/legal-notice.component.html
+++ b/src/app/shared/legal-notice/legal-notice.component.html
@@ -3,22 +3,22 @@
   <div class="main-content-input">
     <app-header></app-header>
         <div class="contractDetails">
-            <h1 class="DieterHeading1">Impressum</h1>
-            <h2 class="HeadingLeft"><span>Anbieter</span></h2>
+            <h1 class="DieterHeading1">Imprint</h1>
+            <h2 class="HeadingLeft"><span>Provider</span></h2>
             <p class="Body">Burak Bostanli, Pascal Fiedler, Irina Gorges, Maik Bennefeld</p>
             <p class="Body"><span class="multiline">Am Schacht 10
                 31084 Freden</span>
             </p>
-            <h2 class="HeadingLeft"><span>Kontakt</span></h2>
+            <h2 class="HeadingLeft"><span>Contact us</span></h2>
             <p class="Body">E-Mail: maikbennefeld&#64;googlemail.com</p>
-            <p class="Body">Telefon: 016095160472</p>
-            <h2 class="HeadingLeft"><span>Datenschutzhinweis</span></h2>
-            <p class="Body">Unsere Datenschutzerklärung finden Sie unter: <a href="https://ik-0225-join-003.developerakademie.net/angular-projects/join/privacy" target="_blank">https://ik-0225-join-003.developerakademie.net/angular-projects/join/privacy</a></p>
-            <h2 class="HeadingLeft"><span>Urheberrechtshinweis</span></h2>
-            <p class="Body">Die auf unserer Internetseite vorhandenen Texte, Bilder, Fotos, Videos oder Grafiken unterliegen in der Regel dem Schutz des Urheberrechts. Jede unberechtigte Verwendung (insbesondere die Vervielfältigung, Bearbeitung oder Verbreitung) dieser urheberrechtsgeschützten Inhalte ist daher untersagt. Wenn Sie beabsichtigen, diese Inhalte oder Teile davon zu verwenden, kontaktieren Sie uns bitte im Voraus unter den oben stehenden Angaben. Soweit wir nicht selbst Inhaber der benötigten urheberrechtlichen Nutzungsrechte sein sollten, bemühen wir uns, einen Kontakt zum Berechtigten zu vermitteln.</p>
-            <p class="DieterSmall"><span>Erstellt mit freundlicher Unterstützung von </span>
+            <p class="Body">Phone: 016095160472</p>
+            <h2 class="HeadingLeft"><span>Data protection notice</span></h2>
+            <p class="Body">You can find our Privacy Policy at: <a href="https://ik-0225-join-003.developerakademie.net/angular-projects/join/privacy" target="_blank">https://ik-0225-join-003.developerakademie.net/angular-projects/join/privacy</a></p>
+            <h2 class="HeadingLeft"><span>Copyright notice</span></h2>
+            <p class="Body">The texts, images, photos, videos or graphics available on our website are generally subject to copyright protection. Any unauthorized use (especially copying, editing or distribution) of this copyright-protected content is therefore prohibited. If you intend to use this content or parts thereof, please contact us in advance using the details above. If we are not the owner of the required copyrighted rights of use ourselves, we will endeavor to arrange contact with the entitled party.</p>
+            <p class="DieterSmall"><span><i>Created with the kind support of </i></span>
                 <a href="https://www.dieter-datenschutz.de/">
-                    <span>Dieter macht den Datenschutz</span>
+                    <span><i>Dieter does data protection</i></span>
                 </a>
             </p>
         </div>
