Add drag-and-drop to Kanban board with Angular CDK
Integrated Angular CDK drag-and-drop functionality for Kanban board columns and cards. Updated UI to support draggable cards, added new edit/delete button assets, and improved full card and board styling. Refactored task interfaces for stricter typing and added logic to update task status on drop.

--- a/src/app/kanban/kanban-board/full-card/full-card.component.html
+++ b/src/app/kanban/kanban-board/full-card/full-card.component.html
@@ -28,26 +28,43 @@
       <span>Assignet To:</span>
       <div class="user-priority">
         @for (user of task.assignedTo; track $index) {
-        <div class="user initials">{{ user.user.slice(0, 2).toLocaleUpperCase()}}</div>
-        <div>{{user.user}}</div>
+        <div class="user-details">
+          <div class="user initials">{{ user.user.slice(0, 2).toLocaleUpperCase()}} </div>
+          <div class="user-name">{{user.user}}</div>
+        </div>
+
         }
       </div>
     </div>
 
 
-        <div class="input-assigned-to">
+    <div class="input-assigned-to">
       <span>Subtasks:</span>
-      <div class="user-priority">
-    <div class="subtask">{{task.subTask}}</div>
+      <div class="subtask-priority">
+        <div class="subtask">{{task.subTask}}</div>
       </div>
     </div>
 
-<!--             <div class="input-assigned-to">
+    <!--             <div class="input-assigned-to">
       <span>Subtasks:</span>
       <div class="user-priority">
         <input type="checkbox" [(ngModel)]="task.subTask">
       </div>
     </div>
---> 
+-->
+
+<div class="edit-delete-area">
+
+  <div class="delete-container">
+  <div class="delete"></div> <p>Delete</p>
+  </div>
+
+  <div class="hyphen"></div>
+
+  <div class="edit-container">
+  <div class="edit"></div> <p>Edit</p>
+  </div>
+
+</div>
   </div>
 </section>
