--- a/src/app/kanban/kanban.component.scss
+++ b/src/app/kanban/kanban.component.scss
@@ -15,11 +15,12 @@
 }
 
 .kanban-board-content {
+    
     display: flex;
     width: 100%;
     padding: 0em 4em;
     background: #f0f0f0;
-
+    overflow-y: auto;
 }
 
 app-kanban-board {
