--- a/src/app/kanban/kanban-add/kanban-add.component.html
+++ b/src/app/kanban/kanban-add/kanban-add.component.html
@@ -81,7 +81,7 @@
                                 <div class="kanban-overlay-subtask">
                                     <span class="subtask-span">Subtask</span>
                                     <div class="subtaskfield" (click)="$event.stopPropagation();">
-                        <input [(ngModel)]="subtaskString" type="text"(focus)="isInputFocused = true" >
+                        <input [(ngModel)]="subtaskString" type="text"(focus)="isInputFocused = true" placeholder="Add a subtask">
                         @if(!isInputFocused){
                             <div class="add">
                                 <img src="assets/img/kanban-edit-overlay/plus-zichen.svg" alt=""/>
