--- a/src/app/kanban/kanban-add/kanban-add.component.scss
+++ b/src/app/kanban/kanban-add/kanban-add.component.scss
@@ -209,7 +209,7 @@ section {
                             cursor: pointer;
                         }
                         .add{
-                            z-index: -10;
+                            
                             height: 100%;
                             img{
                             &:hover{
@@ -240,6 +240,10 @@ section {
 
 
 .confirm-clear-add-button {
+    display: flex;
+    justify-content: flex-end;
+    padding-top: 15em;
+
     .clear {
       display: flex;
       justify-content: center;
